2000-08-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: check data port for ftps-data; all_lines
	  new member; check all_lines for auto-sync-mode; fix ftps connection
	  borrowing.
	* resource.cc: make use-site-idle off by default; validate https:proxy.
	* HttpDir.cc: fix unterminated comment handling; handle bsd-like
	  ftp listings from apache proxy.

2000-08-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: (MergeCookies) null-terminate cookie properly.

2000-08-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: support for ssl (AUTH TLS).
	* resource.cc: new settings ftp:ssl-allow, ssl-force, ssl-protect-data;
	  allow https for http:proxy; set https:proxy by https_proxy.
	* Http.cc: move Https::New to ifdef; fix cookie closure match.

2000-08-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h: init https properly; rework cookie sending/receiving,
	  now cookies are joined from all matching closures, path is
	  also checked; use lftp_ssl_new; don't disconnect in some cases.
	* ResMgr.cc, ResMgr.h: (QueryNext) new method for cookies merging.
	* buffer.cc: use service lftp_ssl* functions.
	* ftpclass.cc, ftpclass.h: send SITE IDLE.
	* resource.cc: new setting ftp:use-site-idle.
	* ResMgr.cc: quote ;& properly.
	* MirrorJob.cc: increment error_count when cd fails.

2000-07-31  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: add ] to list of wildcards.
	* FtpGlob.cc: fix coredump on empty directories.
	* complete.cc: fix filename quotation.
	* lftp_ssl.cc, lftp_ssl.h: new files.

2000-07-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: res_prefix new member.
	* FindJob.cc, Fish.cc, Fish.h, FtpDirList.cc, LocalAccess.cc,
	  Resolver.cc: use new IOBuffer.
	* Http.cc, Http.h: implement https; use IOBuffer.
	* HttpDir.cc: skip comments in html; use IOBuffer.
	* buffer.cc, buffer.h: IOBuffer class; IOBufferSSL for ssl IO.